[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "impish"
version = "0.0.7"
authors = [
{ name="Kevin Binder", email="cookiej4r@web.de" },
]
description = "A small package to simplify interprocess communication"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
"Programming Language :: Python :: 3",
"License :: OSI Approved :: MIT License",
"Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/CookieJ4R/impish"
"Bug Tracker" = "https://github.com/CookieJ4R/impish/issues"